# Shooter2025

./: CMakeLists.txt  README.md
res/Models/Enemy/: Man.mtl  Zombie.glb  material.lib
res/Models/Player/: Soldier.glb
src/: Common.h  main.cpp
src/AssetBank/: AssetBank.cpp  AssetBank.h
src/Components/: AnimationComponent.h  CameraComponent.h  CollisionSphereComponent.h  HealthComponent.h  HealthRenderComponent.h  KeyboardControllerComponent.h  MeshComponent.h  ProjectileComponent.h  ProjectileShooterComponent.h  RigidbodyComponent.h  ScoreTrackerComponent.h  SfxComponent.h  TransformComponent.h
src/ECS/: ECS.cpp  ECS.h
src/EventBus/: Event.h  EventBus.h
src/Events/: CollisionEvent.h  DamageEvent.h  DeathEvent.h  KeyPressEvent.h  MysteryBoxEvent.h
src/Game/: Game.cpp  Game.h  Scene.cpp  Scene.h
src/Systems/: AnimationSystem.h  BoundsSystem.h  CollisionResolutionSystem.h  CollisionShapesRenderSystem.h  CollisionSystem.h  DamageSystem.h  DeathSystem.h  DebugRenderSystem.h  EnemySpawnerSystem.h  HealthRenderSystem.h  KeyboardControllerSystem.h  MovementSystem.h  MysteryBoxSystem.h  ProjectileSystem.h  RenderSystem.h  ScoreSystem.h  UIRenderSystem.h
src/Util/: Debug.h
